--- a/Taller_árboles_de_decision/Taller_Arboles.ipynb
+++ b/Taller_árboles_de_decision/Taller_Arboles.ipynb
@@ -967,13 +967,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "bIMxvL770bYG"
    },
    "source": [
     "**TO_DO 12:**\n",
-    "¿En cuántas regiones $R_i$ separó el espacio de las dos variables de entrada el árbol anterior? Descríbalas."
+    "¿En cuántas regiones $R_i$ separó el espacio de las dos variables de entrada el árbol anterior? Descríbalas.\n"
    ]
   },
   {
@@ -982,7 +983,7 @@
    "metadata": {},
    "source": [
     "## Respuesta:\n",
-    "El árbol realizado por regresión cuenta con 3 regiones, en las cuales separo los dos variables."
+    "El árbol de regresión cuenta con 3 regiones. Inicialmente se tiene una división basada en la cantidad de años que el jugador ha pertenecido a las ligas mayores siendo 4.5 el nivel determinante que diferencia el grupo de 90 bateadores de menores ingresos con 225.831 en promedio del resto de jugadores con 697.247 en promedio. Este segundo grupo se bifurca nuevamente según la cantidad de aciertos realizados siendo 117.5 aciertos el nivel diferenciador. El resultado de esta segunda separación es un grupo de 90 jugadores de ingresos medios con media 464.917 y el grupo de 83 jugadores con mayores ingresos de 949.171"
    ]
   }
  ],
