--- a/Taller_KNN_Feb23/Taller_KNN_Feb23.ipynb
+++ b/Taller_KNN_Feb23/Taller_KNN_Feb23.ipynb
@@ -606,6 +606,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Notemos que la mayoria que estuvieron en el titanic no tenian hijos los cuales son 122, luego los que tenian un hijo son 37, 23 con dos hijos y uno con cuatro hijos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -626,6 +634,14 @@
    ],
    "source": [
     "df['Embarked'].value_counts()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Notemos que en puerto donde más ingresaron pasajeros al titanic era el S con 116, luego el C con 65 y por ultimo el Q con 2."
    ]
   },
   {
