--- a/Taller_KNN_Feb23/Taller_KNN_Feb23.ipynb
+++ b/Taller_KNN_Feb23/Taller_KNN_Feb23.ipynb
@@ -20,12 +20,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "TfBew5r1uKq3"
    },
    "source": [
-    "Usamos el método de vecinos más cercanos para clasificación. Por un lado, analizamos el Iris Dataset sobre especies de flores. Por el otro lado analizamos la supervivencia en la tragedia del Titanic utilizando diferentes valores de K. \n",
+    "Usamos el método de vecinos más cercanos para clasificación. Por un lado, analizamos el Iris Dataset sobre especies de flores. Por el otro lado analizamos la supervivencia en la tragedia del Titanic utilizando diferentes valores de K.\n",
     "\n",
     "Importamos primero las librerías y paquetes que utilizaremos. Puede importar otros si lo considera útil."
    ]
@@ -968,7 +969,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1daab71ba10>]"
+       "[<matplotlib.lines.Line2D at 0x2bcf5543690>]"
       ]
      },
      "execution_count": 25,
@@ -1166,7 +1167,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1dab41890d0>]"
+       "[<matplotlib.lines.Line2D at 0x2bcf96fa510>]"
       ]
      },
      "execution_count": 27,
