--- a/Proyecto 2/Proyecto 2.ipynb
+++ b/Proyecto 2/Proyecto 2.ipynb
@@ -742,11 +742,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ca030d36",
    "metadata": {},
    "source": [
-    "**Entrenar el modelo e ir imprimiendo los errores del test y la validación.**"
+    "**Entrenar el modelo e ir imprimiendo los errores del train y la validación.**"
    ]
   },
   {
@@ -1279,7 +1280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
