--- a/Taller_svm/Taller_SVM_18_Abr.ipynb
+++ b/Taller_svm/Taller_SVM_18_Abr.ipynb
@@ -1,15 +1,31 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "JY8MSq-XHiPU"
    },
    "source": [
-    "Usaremos máquinas de soporte vectorial para determinar si un paciente tiene o no enfermedad en el corazón. Utilizaremos los datos en [heart disease](https://archive.ics.uci.edu/ml/datasets/Heart+Disease) que se encuentran en el [UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/index.php).\n",
+    "# Taller SVM\n",
+    "**Integrantes:**\n",
+    "\n",
+    "* Dayana Valentina Gonzalez Vargas\n",
+    "* Juan Manuel Ramirez\n",
+    "\n",
+    "\n",
+    "En este taller usaremos máquinas de soporte vectorial para determinar si un paciente tiene o no enfermedad en el corazón. Utilizaremos los datos en [heart disease](https://archive.ics.uci.edu/ml/datasets/Heart+Disease) que se encuentran en el [UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/index.php).\n",
     "\n",
     "Entregar en formato .ipynb o .html en la plataforma\n",
     " a más tardar el día miércoles 26 de abril."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Librerias"
    ]
   },
   {
@@ -31,6 +47,14 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import ConfusionMatrixDisplay as plot_confusion_matrix\n",
     "from sklearn.decomposition import PCA "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cargar Datos"
    ]
   },
   {
@@ -605,6 +629,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conjunto de Train y Test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
@@ -613,6 +645,14 @@
     "y = df['hd']\n",
     "X = df.drop(columns =['hd'])\n",
     "X_train, X_test, y_train, y_test = train_test_split( X, y, test_size=0.20, random_state=42)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estandarización"
    ]
   },
   {
@@ -825,12 +865,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "pRw9qMYgHK2C"
    },
    "source": [
-    "Queremos visualizar el resultado de entrenad un clasificador de Máquina de soporte vectorial. Sin embargo nuestros datos están en una dimensión que no podemos visualizar. Es por eso que haremos una reducción de la dimensionalidad de nuestros datos mediante un método llamado Principal Component Analysis (en el cual ahondaremos más adelante)."
+    "Queremos visualizar el resultado de entrenada un clasificador de Máquina de soporte vectorial. Sin embargo nuestros datos están en una dimensión que no podemos visualizar. Es por eso que haremos una reducción de la dimensionalidad de nuestros datos mediante un método llamado Principal Component Analysis (en el cual ahondaremos más adelante)."
    ]
   },
   {
